--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix || true",
     "prepare": "npm run build",
-    "test": "mocha --compilers js:babel-core/register --recursive 'lib/**/*.tests.js'",
+    "test": "mocha --require babel-core/register --recursive 'lib/**/*.tests.js'",
     "test:watch": "npm test -- --watch"
   },
   "dependencies": {
     "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^6.0.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint": "^2.11.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.3.0",
     "eslint-plugin-react": "^5.1.1",
     "expect": "^1.20.1",
-    "mocha": "^2.5.3"
+    "mocha": "^6.0.2"
   }
 }
