--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,16 @@
 {
-  "presets": ["es2015", "stage-0"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "8"
+        }
+      }
+    ]
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "transform-es2015-modules-commonjs"
+  ]
 }
