--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "airbnb",
+  "extends": "airbnb-base",
   "parser": "babel-eslint",
   "env": {
     "node": true,
@@ -8,6 +8,7 @@
   "rules": {
     "arrow-body-style": 1,
     "consistent-return": 1,
+    "import/no-extraneous-dependencies": 0,
     "max-len": 0,
     "no-param-reassign": 0,
     "no-use-before-define": [2, "nofunc"],
