--- a/package.json
+++ b/package.json
@@ -13,32 +13,36 @@
   },
   "homepage": "https://github.com/aldeed/node-message-box",
   "files": [
-    "dist"
+    "dist",
+    "LICENSE",
+    "README.md"
   ],
   "main": "./dist/MessageBox.js",
   "scripts": {
-    "build": "rm -rf dist/** && babel lib --out-dir dist --ignore *.tests.js",
+    "build": "rm -rf dist/** && babel lib --out-dir dist --ignore 'lib/**/*.tests.js'",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix || true",
-    "prepare": "npm run build",
-    "test": "mocha --require babel-core/register --recursive 'lib/**/*.tests.js'",
+    "prepublishOnly": "npm run build",
+    "test": "mocha --require @babel/register --recursive 'lib/**/*.tests.js'",
     "test:watch": "npm test -- --watch"
   },
   "dependencies": {
-    "lodash": "^4.17.14"
+    "deep-extend": "^0.6.0",
+    "lodash.template": "^4.5.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^6.0.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "eslint": "^4.18.2",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.3.0",
-    "eslint-plugin-react": "^5.1.1",
-    "expect": "^1.20.1",
-    "mocha": "^6.1.4"
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/register": "^7.9.0",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-import-meta": "^1.0.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "expect": "^1.20.2",
+    "mocha": "^7.1.1"
   }
 }
