--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "README.md"
   ],
   "main": "./dist/MessageBox.js",
+  "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead",
   "scripts": {
     "build": "rm -rf dist/** && babel lib --out-dir dist --ignore 'lib/**/*.tests.js'",
     "lint": "eslint .",
