Fix: Transpiling failing in web.browser.legacy Meteor packages
Use config from Meteor package `socket-stream-client`.

--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,12 @@
       "@babel/preset-env",
       {
         "targets": {
-          "node": "8"
+          "node": "8",
+          "chrome": 16,
+          "edge": 12,
+          "firefox": 11,
+          "ie": 10,
+          "safari": 7
         }
       }
     ]
