--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,7 @@
 {
   "presets": [
     [
-      "@babel/preset-env",
-      {
-        "targets": {
-          "node": "8",
-          "chrome": 16,
-          "edge": 12,
-          "firefox": 11,
-          "ie": 10,
-          "safari": 7
-        }
-      }
+      "@babel/preset-env"
     ]
   ],
   "plugins": [
