--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "test:watch": "npm test -- --watch"
   },
   "dependencies": {
-    "lodash.template": "^4.5.0"
+    "micromustache": "^8.0.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
+    "@babel/cli": "^7.13.10",
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
