--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test:watch": "npm test -- --watch"
   },
   "dependencies": {
-    "micromustache": "^8.0.3"
+    "mustache": "^4.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
