--- a/package.json
+++ b/package.json
@@ -6,45 +6,69 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/aldeed/node-message-box.git"
+    "url": "https://github.com/longshotlabs/js-message-box.git"
   },
   "bugs": {
-    "url": "https://github.com/aldeed/node-message-box/issues"
+    "url": "https://github.com/longshotlabs/js-message-box/issues"
   },
-  "homepage": "https://github.com/aldeed/node-message-box",
+  "homepage": "https://github.com/longshotlabs/js-message-box",
+  "type": "module",
   "files": [
     "dist",
     "LICENSE",
     "README.md"
   ],
-  "main": "./dist/MessageBox.js",
+  "main": "./dist/cjs/main.js",
+  "module": "./dist/esm/main.js",
+  "types": "./dist/esm/main.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/main.js",
+      "require": "./dist/cjs/main.js"
+    }
+  },
+  "engines": {
+    "node": ">=18",
+    "npm": ">=9"
+  },
   "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead",
   "scripts": {
-    "build": "rm -rf dist/** && babel lib --out-dir dist --ignore *.test.js",
-    "lint:fix": "eslint ./lib/. --fix || true",
-    "lint": "eslint ./lib/.",
+    "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && ./scripts/post-build.sh",
+    "check": "tsc --noEmit",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "prepublishOnly": "npm run build",
-    "test": "mocha --require @babel/register --recursive lib/**/*.test.js",
+    "test": "NODE_NO_WARNINGS=1 mocha",
     "test:watch": "npm test -- --watch"
   },
-  "dependencies": {
-    "lodash.template": "^4.5.0"
-  },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.16.0",
-    "@babel/eslint-parser": "^7.16.3",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/register": "^7.16.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-plugin-add-module-exports": "^1.0.4",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "expect": "1.20.2",
-    "mocha": "^9.1.3"
+    "@eslint/js": "^9.14.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/lodash-es": "^4.17.12",
+    "@types/mocha": "^10.0.9",
+    "@types/sinon": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
+    "eslint": "^9.14.0",
+    "eslint-config-love": "^98.0.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-redos": "^4.4.5",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.14.0",
+    "expect": "^29.7.0",
+    "mocha": "^10.8.2",
+    "sinon": "^19.0.2",
+    "ts-node": "^10.9.2",
+    "ts-standard": "^12.0.2",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.14.0"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "dependencies": {
+    "lodash-es": "^4.17.21"
   }
 }
